syntax = "proto3";

option csharp_namespace = "GrpcLiveServer.Protos";

service Customer{
	rpc GetCustomerInfo(CustomerLookupModel) returns (CustomerModel);
	rpc GetNewCustomerInfo(NewCustomerInfoModel) returns (stream CustomerModel);
}

message NewCustomerInfoModel{

}


message CustomerLookupModel{
	int32 UserId = 1;
}


message CustomerModel{
	string firstName = 1;
	string lastName = 2;
}
